--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {font-family:calibri;background-color: #000000;box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;}
-h1 {width:100%;color:white; margin:0}
+h1 {color:white; margin:0}
 p {text-align: center; color: white}
 select {background-color: black; color: white; height:100%}
 select option:nth-child(odd) {background-color: #030303;}
@@ -37,7 +37,7 @@ table, td, th, tr{color: white;border: 1px solid black; border-collapse: collaps
 #CloseAllTables {position: absolute;top:14%;width: 100%}
 #configTable {overflow: hidden;border: 2px solid white;border-radius: 10%;display: flex; align-items: center; justify-content: center; flex-direction: column;}
 #configTable > select, #configTable > input {margin: 5px}
-#configTableButton {position: absolute;width: 10%; margin: 5px;left: 5px;top:5px}
+#configTableButton {position: absolute;width: 35px; top:0px; left:0px;margin: 7px}
 #configTableModal {position: absolute; top:0;left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index:201;display: flex; align-items: center; justify-content: center; flex-direction: column;}
 #confirmReservation {font-size:30px; position: absolute;left:-2px;bottom: 0; width:101%; height:20%}
 #leftPanelButton {margin: 7px;width: 6vh}
@@ -51,5 +51,6 @@ table, td, th, tr{color: white;border: 1px solid black; border-collapse: collaps
 #resetTablesReservations {position: absolute;top:7%;width: 100%}
 #reservetable {margin: 5px; font-size: 25px !important; line-height:2.5vh; width:40px; height:40px; position: absolute;right: 0;top:0;z-index:99;background-color:#ffa200;color:white;font-size:5vh; border-radius: 30%}
 #reservationParameters {font-size: 5vh;height:75%; width:96%;display: flex; align-items: center; justify-content: center; flex-direction: column}
+#settings {position: absolute;top:28%;width:100%}
 .waiterLogin {font-size:30px;margin-top:1vh; margin-bottom: 0;border: 0px;width: 101%; bottom: 0}
 .waiterLogin2 {color:white; padding-left: 10px; padding-right: 10px;position:relative;font-size:30px;margin-top:1vh; margin-bottom: 0;border: 0px;width: 55%; bottom: 0}
